--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile "net.dv8tion:JDA:$jdaVersion"
+    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.3'
+
 }
 
 compileJava.options.encoding = 'UTF-8'
